<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alert_svgrepo_com" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="221dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/smartalert"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?android:attr/textColor"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoText2"
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="128dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/build_a_safer_world_together"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:attr/textColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_style"
        android:backgroundTint="?android:attr/colorAccent"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_style"
        android:backgroundTint="?android:attr/colorAccent"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <TextView
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/enter_your_password"
        android:textColor="?android:attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />


    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/dont_have_an_account"
        android:textColor="?android:attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/enter_your_email"
        android:textColor="?android:attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText2" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/continueBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <View
        android:id="@+id/view"
        android:layout_width="130dp"
        android:layout_height="0.1dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:attr/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueBtn" />

    <View
        android:id="@+id/view2"
        android:layout_width="130dp"
        android:layout_height="0.1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="?android:attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/or"
        android:textColor="?android:attr/textColor"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/continueBtn" />

    <ImageButton
        android:id="@+id/googleBtn"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/google_login"
        android:contentDescription="@string/log_in_with_google"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/createAccount"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="?android:attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="160dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_animation.json"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>