<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/rounded_corner_alert"
    android:backgroundTint="?android:attr/colorAccent">


    <TextView
        android:id="@+id/declineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reject_the_incident"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/rejectCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/are_you_sure_about_rejecting_the_incident_described"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/alert_rejectBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:layout_marginRight="20dp">

        </Button>
        <Button
            android:id="@+id/alert_cancelBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginLeft="20dp">

        </Button>
    </LinearLayout>


</LinearLayout>